<resources>
    <string name="app_name">Shopping</string>
    <string name="shopping_list">Shopping List</string>
    <string name="estimated_total">Estimated Total:</string>
    <string name="item_description">Item Description</string>
    <string name="date">Date</string>
    <string name="item_category">Item Category</string>
    <string name="item_title">Item Title</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="Make_new_item">New Item</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="remove_all">Remove All</string>
    <string name="display_app_name">ShopSmart</string>
    <string name="shopsmart">ShopSmart</string>
    <string name="category">Category</string>
    <string name="default_price">0</string>
    <string name="description">Description</string>
</resources>
