<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:layout_width="68dp"
            android:layout_height="73dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/itemIcon"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"/>
    <TextView
            android:text="@string/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintStart_toEndOf="@+id/itemIcon"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/itemIcon"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCategory"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="10sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvTitle"/>
    <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvDate"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tvDescription" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>

    <TextView
            android:text="@string/item_description"
            android:textSize="10sp"
            android:layout_width="196dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/itemIcon"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/tvDescription"/>

    <TextView
            android:text="Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPrice" app:layout_constraintStart_toEndOf="@+id/tvDescription"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvDescription"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbDone" app:layout_constraintStart_toEndOf="@+id/tvPrice"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/btnEdit"
            android:id="@+id/btnDelete"/>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/btnEdit"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" android:layout_marginRight="36dp" android:layout_marginTop="24dp"/>
</android.support.constraint.ConstraintLayout>