<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/shopping_list"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvShoppingList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintVertical_bias="0.011"/>

    <android.support.v7.widget.RecyclerView
            android:layout_height="400dp"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvShoppingList"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/recyclerView"/>

    <TextView
            android:text="@string/estimated_total"
            android:id="@+id/tvEstimatedTotal"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="148dp"
            android:layout_marginStart="148dp"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:scaleType="center"
            android:id="@+id/newShoppingItem"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="@android:color/darker_gray"
            app:rippleColor="@color/colorPrimary"
            app:maxImageSize="72dp"
            app:srcCompat="@drawable/icons8_add_100"
    />
    <Button
            android:text="@string/remove_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeleteAll"
            android:background="@color/colorAccent"
            android:textColor="#FFF"
            android:padding="15sp"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>